--- a/.github/workflows/update_image.yml
+++ b/.github/workflows/update_image.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Docker Image Update Checker
@@ -26,7 +26,7 @@ jobs:
           
       - name: Check if Tag Exists Update or Create
         uses: actions/github-script@v6
-        
+        if: steps.check.outputs.needs-updating == 'true'
         with:
           script: |
             // Check if ref exists
