--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker buildx build --platform linux/amd64,linux/arm/v7,linux/arm/v7 -f $DOCKERFILE_PATH -t $IMAGE_NAME  .
+docker build --platform linux/amd64,linux/arm/v7,linux/arm/v7 -f $DOCKERFILE_PATH -t $IMAGE_NAME  .
