--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker buildx build --push --platform linux/amd64,linux/arm64/v8,linux/arm/v7 -f $DOCKERFILE_PATH -t $IMAGE_NAME .
+docker buildx build . -t $IMAGE_NAME -f $DOCKERFILE_PATH --platform linux/amd64,linux/arm64/v8,linux/arm/v7 --push
